// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelDetails /> should render properly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-6 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-7 {
  position: relative;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-bottom: 4px;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited,
.emotion-8 .noop {
  background-color: #808080;
}

.emotion-8:hover,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-16 {
  height: 16px;
}

.emotion-17 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-30 button,
.emotion-30 a {
  margin-right: 16px;
}

.emotion-30 button:last-child,
.emotion-30 a:last-child {
  margin-right: 0;
}

.emotion-31 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-31,
.emotion-31:hover,
.emotion-31:visited,
.emotion-31 .noop {
  background-color: #3A5DFF;
}

.emotion-31:hover,
.emotion-31 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-31[aria-disabled=true],
.emotion-31 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-34 div {
  margin-left: 0;
}

.emotion-34 button {
  margin-right: 0;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-35:hover div,
.emotion-35:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-35:hover button,
.emotion-35:focus-within button {
  color: #ffffff;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-37 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-37:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-38:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-39 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-40 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-41 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          href="/[projectId]/jobs/[jobId]"
          passHref={true}
        >
          <a>
            Check Status
          </a>
        </Link>
      </div>
    </div>
  </div>
  
  <div>
    <div
      className="emotion-4"
    >
      <div>
        <div
          className="emotion-5"
        >
          Model
           Name:
        </div>
        <h3
          className="emotion-6"
        >
          console_face_recognition
        </h3>
      </div>
      <div
        className="emotion-7"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="emotion-8"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <ul
      className="emotion-9"
    >
      <li
        className="emotion-10"
      >
        <div
          className="emotion-11"
        >
          Model Type
          :
        </div>
        <div
          className="emotion-10"
        >
          ZVI_FACE_RECOGNITION
        </div>
      </li>
      <li
        className="emotion-10"
      >
        <div
          className="emotion-11"
        >
          Description
          :
        </div>
        <div
          className="emotion-10"
        />
      </li>
    </ul>
  </div>
  <div
    className="emotion-16"
  />
  <hr
    className="emotion-17"
  />
  <div
    className="emotion-16"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        You must add a dataset below before you can train or apply the model, or view the matrix.
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div>
      <ul
        className="emotion-9"
      >
        <li
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Last Trained
            :
          </div>
          <div
            className="emotion-10"
          >
            Untrained
          </div>
        </li>
        <li
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Last Analyzed
            :
          </div>
          <div
            className="emotion-10"
          >
            Model Analysis has not been run.
          </div>
        </li>
      </ul>
      <div
        className="emotion-30"
      >
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-34"
        >
          <div
            className="emotion-35"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-36"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-37"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-38"
              />
              <div
                className="emotion-39"
              >
                <h3
                  className="emotion-40"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-41"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-41"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      model={
        Object {
          "actorCreated": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "actorModified": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "deploySearch": Object {
            "query": Object {
              "matchAll": Object {},
            },
          },
          "fileId": "models/621bf775-89d9-1244-9596-d6df43f1ede5/boonai-console_face_recognition-face-recognition/boonai-console_face_recognition-face-recognition.zip",
          "id": "621bf775-89d9-1244-9596-d6df43f1ede5",
          "modelTypeRestrictions": Object {
            "missingLabels": 0,
          },
          "moduleName": "boonai-console_face_recognition-face-recognition",
          "name": "console_face_recognition",
          "runningJobId": "223fd17d-7028-1519-94a8-d2f0132bc0c8",
          "timeCreated": 1594243397871,
          "timeModified": 1594243397871,
          "trainingJobName": "Train console_face_recognition / boonai-console_face_recognition-face-recognition",
          "type": "ZVI_FACE_RECOGNITION",
          "unappliedChanges": true,
        }
      }
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly 2`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-9 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-10 {
  position: relative;
  height: 100%;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-bottom: 4px;
}

.emotion-11,
.emotion-11:hover,
.emotion-11:visited,
.emotion-11 .noop {
  background-color: #808080;
}

.emotion-11:hover,
.emotion-11 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-11[aria-disabled=true],
.emotion-11 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-19 {
  height: 16px;
}

.emotion-20 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-33 button,
.emotion-33 a {
  margin-right: 16px;
}

.emotion-33 button:last-child,
.emotion-33 a:last-child {
  margin-right: 0;
}

.emotion-34 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-34,
.emotion-34:hover,
.emotion-34:visited,
.emotion-34 .noop {
  background-color: #3A5DFF;
}

.emotion-34:hover,
.emotion-34 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-34[aria-disabled=true],
.emotion-34 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-37 div {
  margin-left: 0;
}

.emotion-37 button {
  margin-right: 0;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-38:hover div,
.emotion-38:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-38:hover button,
.emotion-38:focus-within button {
  color: #ffffff;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-40 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-40:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-41:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-42 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-43 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-44 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          href="/[projectId]/jobs/[jobId]"
          passHref={true}
        >
          <a>
            Check Status
          </a>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-5"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>
  <div>
    <div
      className="emotion-7"
    >
      <div>
        <div
          className="emotion-8"
        >
          Model
           Name:
        </div>
        <h3
          className="emotion-9"
        >
          console_face_recognition
        </h3>
      </div>
      <div
        className="emotion-10"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="emotion-11"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <ul
      className="emotion-12"
    >
      <li
        className="emotion-13"
      >
        <div
          className="emotion-14"
        >
          Model Type
          :
        </div>
        <div
          className="emotion-13"
        >
          ZVI_FACE_RECOGNITION
        </div>
      </li>
      <li
        className="emotion-13"
      >
        <div
          className="emotion-14"
        >
          Description
          :
        </div>
        <div
          className="emotion-13"
        />
      </li>
    </ul>
  </div>
  <div
    className="emotion-19"
  />
  <hr
    className="emotion-20"
  />
  <div
    className="emotion-19"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        You must add a dataset below before you can train or apply the model, or view the matrix.
      </div>
    </div>
  </div>
  <div
    className="emotion-7"
  >
    <div>
      <ul
        className="emotion-12"
      >
        <li
          className="emotion-13"
        >
          <div
            className="emotion-14"
          >
            Last Trained
            :
          </div>
          <div
            className="emotion-13"
          >
            Untrained
          </div>
        </li>
        <li
          className="emotion-13"
        >
          <div
            className="emotion-14"
          >
            Last Analyzed
            :
          </div>
          <div
            className="emotion-13"
          >
            Model Analysis has not been run.
          </div>
        </li>
      </ul>
      <div
        className="emotion-33"
      >
        <button
          className="emotion-34"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-34"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-34"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-37"
        >
          <div
            className="emotion-38"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-39"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-40"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-41"
              />
              <div
                className="emotion-42"
              >
                <h3
                  className="emotion-43"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-44"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-44"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      model={
        Object {
          "actorCreated": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "actorModified": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "deploySearch": Object {
            "query": Object {
              "matchAll": Object {},
            },
          },
          "fileId": "models/621bf775-89d9-1244-9596-d6df43f1ede5/boonai-console_face_recognition-face-recognition/boonai-console_face_recognition-face-recognition.zip",
          "id": "621bf775-89d9-1244-9596-d6df43f1ede5",
          "modelTypeRestrictions": Object {
            "missingLabels": 0,
          },
          "moduleName": "boonai-console_face_recognition-face-recognition",
          "name": "console_face_recognition",
          "runningJobId": "223fd17d-7028-1519-94a8-d2f0132bc0c8",
          "timeCreated": 1594243397871,
          "timeModified": 1594243397871,
          "trainingJobName": "Train console_face_recognition / boonai-console_face_recognition-face-recognition",
          "type": "ZVI_FACE_RECOGNITION",
          "unappliedChanges": true,
        }
      }
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly when trained and applied 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-6 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-7 {
  position: relative;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-bottom: 4px;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited,
.emotion-8 .noop {
  background-color: #808080;
}

.emotion-8:hover,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-16 {
  height: 16px;
}

.emotion-17 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-30 button,
.emotion-30 a {
  margin-right: 16px;
}

.emotion-30 button:last-child,
.emotion-30 a:last-child {
  margin-right: 0;
}

.emotion-31 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-31,
.emotion-31:hover,
.emotion-31:visited,
.emotion-31 .noop {
  background-color: #3A5DFF;
}

.emotion-31:hover,
.emotion-31 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-31[aria-disabled=true],
.emotion-31 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-34 div {
  margin-left: 0;
}

.emotion-34 button {
  margin-right: 0;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-35:hover div,
.emotion-35:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-35:hover button,
.emotion-35:focus-within button {
  color: #ffffff;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-37 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-37:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-38:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-39 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-40 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-41 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          href="/[projectId]/jobs/[jobId]"
          passHref={true}
        >
          <a>
            Check Status
          </a>
        </Link>
      </div>
    </div>
  </div>
  
  <div>
    <div
      className="emotion-4"
    >
      <div>
        <div
          className="emotion-5"
        >
          Model
           Name:
        </div>
        <h3
          className="emotion-6"
        >
          console_face_recognition
        </h3>
      </div>
      <div
        className="emotion-7"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="emotion-8"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <ul
      className="emotion-9"
    >
      <li
        className="emotion-10"
      >
        <div
          className="emotion-11"
        >
          Model Type
          :
        </div>
        <div
          className="emotion-10"
        >
          ZVI_FACE_RECOGNITION
        </div>
      </li>
      <li
        className="emotion-10"
      >
        <div
          className="emotion-11"
        >
          Description
          :
        </div>
        <div
          className="emotion-10"
        />
      </li>
    </ul>
  </div>
  <div
    className="emotion-16"
  />
  <hr
    className="emotion-17"
  />
  <div
    className="emotion-16"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        You must add a dataset below before you can train or apply the model, or view the matrix.
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div>
      <ul
        className="emotion-9"
      >
        <li
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Last Trained
            :
          </div>
          <div
            className="emotion-10"
          >
            2021-07-08 20:02:42
          </div>
        </li>
        <li
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Last Analyzed
            :
          </div>
          <div
            className="emotion-10"
          >
            2021-07-08 20:04:24
          </div>
        </li>
      </ul>
      <div
        className="emotion-30"
      >
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-31"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-34"
        >
          <div
            className="emotion-35"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-36"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-37"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-38"
              />
              <div
                className="emotion-39"
              >
                <h3
                  className="emotion-40"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-41"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-41"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      model={
        Object {
          "actorCreated": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "actorModified": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "deploySearch": Object {
            "query": Object {
              "matchAll": Object {},
            },
          },
          "fileId": "models/621bf775-89d9-1244-9596-d6df43f1ede5/boonai-console_face_recognition-face-recognition/boonai-console_face_recognition-face-recognition.zip",
          "id": "621bf775-89d9-1244-9596-d6df43f1ede5",
          "modelTypeRestrictions": Object {
            "missingLabels": 0,
          },
          "moduleName": "boonai-console_face_recognition-face-recognition",
          "name": "console_face_recognition",
          "runningJobId": "223fd17d-7028-1519-94a8-d2f0132bc0c8",
          "timeCreated": 1594243397871,
          "timeLastApplied": 1625774664673,
          "timeLastTrained": 1625774562852,
          "timeModified": 1594243397871,
          "trainingJobName": "Train console_face_recognition / boonai-console_face_recognition-face-recognition",
          "type": "ZVI_FACE_RECOGNITION",
          "unappliedChanges": true,
        }
      }
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly with missing labels 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-bottom: 4px;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited,
.emotion-4 .noop {
  background-color: #808080;
}

.emotion-4:hover,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-12 {
  height: 16px;
}

.emotion-13 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-17 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-17 a:hover {
  color: #3A5DFF;
}

.emotion-18 {
  margin: 0;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-27 button,
.emotion-27 a {
  margin-right: 16px;
}

.emotion-27 button:last-child,
.emotion-27 a:last-child {
  margin-right: 0;
}

.emotion-28 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-28,
.emotion-28:hover,
.emotion-28:visited,
.emotion-28 .noop {
  background-color: #3A5DFF;
}

.emotion-28:hover,
.emotion-28 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-28[aria-disabled=true],
.emotion-28 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-31 div {
  margin-left: 0;
}

.emotion-31 button {
  margin-right: 0;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-32:hover div,
.emotion-32:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-32:hover button,
.emotion-32:focus-within button {
  color: #ffffff;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-34 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-34:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-35:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-36 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-37 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-38 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  
  
  <div>
    <div
      className="emotion-0"
    >
      <div>
        <div
          className="emotion-1"
        >
          Model
           Name:
        </div>
        <h3
          className="emotion-2"
        >
          console_face_recognition
        </h3>
      </div>
      <div
        className="emotion-3"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="emotion-4"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <ul
      className="emotion-5"
    >
      <li
        className="emotion-6"
      >
        <div
          className="emotion-7"
        >
          Model Type
          :
        </div>
        <div
          className="emotion-6"
        >
          ZVI_FACE_RECOGNITION
        </div>
      </li>
      <li
        className="emotion-6"
      >
        <div
          className="emotion-7"
        >
          Description
          :
        </div>
        <div
          className="emotion-6"
        />
      </li>
    </ul>
  </div>
  <div
    className="emotion-12"
  />
  <hr
    className="emotion-13"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-15"
  >
    <div
      className="emotion-16"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-17"
        role="alert"
      >
        This type of model requires a larger dataset before it can be trained.
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          href="/[projectId]/visualizer"
          passHref={true}
        >
          <a
            onClick={[Function]}
          >
            Add More Labels
          </a>
        </Link>
        <br />
        <ul
          className="emotion-18"
        >
          <li>
            5
             more label
            s
             (min. =
             
            5
             unique
            s
            )
          </li>
          <li>
            5
             more labeled asset
            s
             (min. =
             
            5
             of each label)
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="emotion-0"
  >
    <div>
      <ul
        className="emotion-5"
      >
        <li
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            Last Trained
            :
          </div>
          <div
            className="emotion-6"
          >
            2021-07-08 20:02:42
          </div>
        </li>
        <li
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            Last Analyzed
            :
          </div>
          <div
            className="emotion-6"
          >
            2021-07-08 20:04:24
          </div>
        </li>
      </ul>
      <div
        className="emotion-27"
      >
        <button
          aria-disabled={true}
          className="emotion-28"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          aria-disabled={true}
          className="emotion-28"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          aria-disabled={true}
          className="emotion-28"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-31"
        >
          <div
            className="emotion-32"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-33"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-34"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-35"
              />
              <div
                className="emotion-36"
              >
                <h3
                  className="emotion-37"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-38"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-38"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      model={
        Object {
          "actorCreated": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "actorModified": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
          "deploySearch": Object {
            "query": Object {
              "matchAll": Object {},
            },
          },
          "fileId": "models/621bf775-89d9-1244-9596-d6df43f1ede5/boonai-console_face_recognition-face-recognition/boonai-console_face_recognition-face-recognition.zip",
          "id": "621bf775-89d9-1244-9596-d6df43f1ede5",
          "modelTypeRestrictions": Object {
            "missingLabels": 5,
            "missingLabelsOnAssets": 5,
            "requiredAssetsPerLabel": 5,
            "requiredLabels": 5,
          },
          "moduleName": "boonai-console_face_recognition-face-recognition",
          "name": "console_face_recognition",
          "runningJobId": "",
          "timeCreated": 1594243397871,
          "timeLastApplied": 1625774664673,
          "timeLastTrained": 1625774562852,
          "timeModified": 1594243397871,
          "trainingJobName": "Train console_face_recognition / boonai-console_face_recognition-face-recognition",
          "type": "ZVI_FACE_RECOGNITION",
          "unappliedChanges": true,
        }
      }
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly with unapplied changes 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-bottom: 4px;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited,
.emotion-4 .noop {
  background-color: #808080;
}

.emotion-4:hover,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-right: 8px;
}

.emotion-12 {
  height: 16px;
}

.emotion-13 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-17 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-17 a:hover {
  color: #3A5DFF;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-26 button,
.emotion-26 a {
  margin-right: 16px;
}

.emotion-26 button:last-child,
.emotion-26 a:last-child {
  margin-right: 0;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-27,
.emotion-27:hover,
.emotion-27:visited,
.emotion-27 .noop {
  background-color: #3A5DFF;
}

.emotion-27:hover,
.emotion-27 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-27[aria-disabled=true],
.emotion-27 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-30 div {
  margin-left: 0;
}

.emotion-30 button {
  margin-right: 0;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-31:hover div,
.emotion-31:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-31:hover button,
.emotion-31:focus-within button {
  color: #ffffff;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-33 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-33:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-34:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-35 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-36 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-37 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  
  
  <div>
    <div
      className="emotion-0"
    >
      <div>
        <div
          className="emotion-1"
        >
          Model
           Name:
        </div>
        <h3
          className="emotion-2"
        >
          console_face_recognition
        </h3>
      </div>
      <div
        className="emotion-3"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="emotion-4"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <ul
      className="emotion-5"
    >
      <li
        className="emotion-6"
      >
        <div
          className="emotion-7"
        >
          Model Type
          :
        </div>
        <div
          className="emotion-6"
        >
          ZVI_FACE_RECOGNITION
        </div>
      </li>
      <li
        className="emotion-6"
      >
        <div
          className="emotion-7"
        >
          Description
          :
        </div>
        <div
          className="emotion-6"
        />
      </li>
    </ul>
  </div>
  <div
    className="emotion-12"
  />
  <hr
    className="emotion-13"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-15"
  >
    <div
      className="emotion-16"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-17"
        role="alert"
      >
        Changes have been made to the dataset since the model was last trained and applied.
      </div>
    </div>
  </div>
  <div
    className="emotion-0"
  >
    <div>
      <ul
        className="emotion-5"
      >
        <li
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            Last Trained
            :
          </div>
          <div
            className="emotion-6"
          >
            2021-07-08 20:02:42
          </div>
        </li>
        <li
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            Last Analyzed
            :
          </div>
          <div
            className="emotion-6"
          >
            2021-07-08 20:04:24
          </div>
        </li>
      </ul>
      <div
        className="emotion-26"
      >
        <button
          className="emotion-27"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-27"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-27"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-30"
        >
          <div
            className="emotion-31"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-32"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-33"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-34"
              />
              <div
                className="emotion-35"
              >
                <h3
                  className="emotion-36"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-37"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-37"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      model={
        Object {
          "actorCreated": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "actorModified": "56fb89be-f380-423f-bcf5-70b43b384a99/Admin Console Generated Key - c2825674-a1fe-4b51-8207-231bc46c1279 - danny@zorroa.com_6a72b6c1-aa96-415b-8c2d-df355ba9c8f5",
          "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
          "deploySearch": Object {
            "query": Object {
              "matchAll": Object {},
            },
          },
          "fileId": "models/621bf775-89d9-1244-9596-d6df43f1ede5/boonai-console_face_recognition-face-recognition/boonai-console_face_recognition-face-recognition.zip",
          "id": "621bf775-89d9-1244-9596-d6df43f1ede5",
          "modelTypeRestrictions": Object {
            "missingLabels": 0,
            "missingLabelsOnAssets": 0,
            "requiredAssetsPerLabel": 0,
            "requiredLabels": 0,
          },
          "moduleName": "boonai-console_face_recognition-face-recognition",
          "name": "console_face_recognition",
          "runningJobId": "",
          "timeCreated": 1594243397871,
          "timeLastApplied": 1625774664673,
          "timeLastTrained": 1625774562852,
          "timeModified": 1594243397871,
          "trainingJobName": "Train console_face_recognition / boonai-console_face_recognition-face-recognition",
          "type": "ZVI_FACE_RECOGNITION",
          "unappliedChanges": true,
        }
      }
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;
